# yt-split

./: .cursorrules  .gitignore  CLAUDE.md  README.md  TODOS.md  package.json  pyrightconfig.json  pytest.ini  requirements.txt
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
docs/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  roadmap.md
pyinstaller/: build.ps1  build.sh  yt-split-py.spec
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  library.rs  main.rs  sidecar.rs
src/app/: main.py
src/features/: download.py  ffmpeg_env.py  progress.py  project.py  separation.py  system.py
tests/: test_ci.py  test_tauri_conf.py
tests/app/: test_pipeline.py
tests/features/: test_download.py  test_ffmpeg_env.py  test_progress.py  test_project.py  test_separation.py  test_system.py
ui/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
ui/src/: main.tsx
ui/src/app/: App.tsx
ui/src/entities/project/api/: library.ts
ui/src/entities/project/model/: types.ts
ui/src/features/audio-player/api/: audio-engine.ts  auto-load.ts
ui/src/features/audio-player/model/: solo.test.ts  solo.ts  store.ts  types.ts
ui/src/features/audio-player/ui/: Player.tsx  TrackChannel.tsx  Transport.tsx
ui/src/features/separate-audio/api/: sidecar.ts
ui/src/features/separate-audio/model/: events.ts  (+1 more)
ui/src/shared/styles/: globals.css
ui/src/shared/ui/: slider.tsx
(+1 files in other folders)
