[package]
name = "yt-split"
version = "0.1.0"
description = "YouTube audio stem separator (Demucs sidecar + Tauri shell)"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yt_split_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "rt-multi-thread", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
